2003-01-20  Dominik Vogt  <dominik.vogt@gmx.de>

	* fvwm/events.c (HandleConfigureRequest):
	fixed placement of icons
	fixed size calculations of icons

2003-01-18  Mikhael Goikhman  <migo@homemail.com>

	* fvwm/expand.c:
	fixed $[desk.name<n>] that was masked by $[desk.n],
	added $[desk.pagesx] and $[desk.pagesy]

2003-01-16  Dan Espen  <dane@mk.telcordia.com>

	* NEWS: Update news.  Spelling fixes 2.5.x news.
	* fvwm/builtins.c (CMD_Exec): Close stdin so the exec'd process knows
	its not interactive.

2003-01-12  Mikhael Goikhman  <migo@homemail.com>

	* fvwm/functable.c:
	added a short description together with the commands

2003-01-12  Marcus Lundblad  <ml@update.uu.se>

	* NEWS:
	Added conditionals Closable,Iconifiable,Maximizable,FixedSize and
	HasHandles

2003-01-11  Mikhael Goikhman  <migo@homemail.com>

	* expand.c:
	* NEWS:
	deprecate all single letter variables, new variables are supported now
	$[w.id], $[w.name], $[w.iconname], $[w.class], $[w.resource],
	$[desk.n], $[version.num], $[version.info], $[version.line].

2003-01-07  Marcus Lundblad <ml@update.uu.se>

	* fvwm/style.c (style_parse_one_style_option):
	* fvwm/fvwm.1.in:
	Removed duplicate styles Unclosable,Unmaximizable,Uniconifiable and
	DisallowMaximizeFixedSize

2003-01-06  Dan Espen  <dane@mk.telcordia.com>

	* fvwm/fvwm.1.in: Lang check.

2003-01-03  olicha  <olivier.chapuis@free.fr>

	* fvwm/commands.h:
	* INSTALL.fvwm:
	* fvwm/ewmh.h:
	* fvwm/ewmh_intern.h:
	* fvwm/ewmh_names.c:
	* fvwm/ewmh_icons.c:
	* fvwm/ewmh_events.c:
	* fvwm/ewmh_conf.c:
	* fvwm/ewmh.c:
	* fvwm/gnome.c:
	* fvwm/gnome.h:
	* fvwm/functable.c (func_table):
	* fvwm/fvwm.c (setVersionInfo):
	* acconfig.h:
	* configure.in:
	Removed GNOME and HAVE_EWMH ifdef

	* fvwm/fvwm.1.in:
	Documented UseTitleDecorRotation

2003-01-03  Mikhael Goikhman  <migo@homemail.com>

	* fvwm/module_interface.c (MoveViewport):
	* fvwm/virtual.c (CMD_DesktopSize, CMD_Send_WindowList):
	M_NEW_PAGE now has 7 arguments
